@@ -1,4 +1,5 @@
 2009-09-14  Tiger Soldier  <tigersoldi@gmail.com>
+	* New icons, we can throw the icon of WMP away now!
 
 	* src/ol_player_exaile.c: Exaile support
 
